--- a/website/index.html
+++ b/website/index.html
@@ -25,6 +25,7 @@
         <div class="title">Most Recent Entry</div>
         <div id="entryHolder">
           <div id="date"></div>
+          <div id="country"></div>
           <div id="temp"></div>
           <div id="content"></div>
         </div>
