--- a/website/index.html
+++ b/website/index.html
@@ -28,6 +28,7 @@
           <div id="country"></div>
           <div id="temp"></div>
           <div id="content"></div>
+          <div id="error"></div>
         </div>
       </div>
     </div>
